LU-6865 mdd: check return value of posix_acl_from_xattr

passing a ERR_PTR to posix_acl_release will cause a crash

Signed-off-by: Li Dongyang <dongyang.li@anu.edu.au>
Change-Id: I1870121e2f4fb187cd8c58f263b651ddf83a574b
Reviewed-on: http://review.whamcloud.com/15633
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>