lustre/mdd/mdd_object.c
@@ -1035,6 +1035,8 @@ static int mdd_xattr_set(const struct lu_env *env, struct md_object *obj,
 		 * ACL. */
 		acl = posix_acl_from_xattr(&init_user_ns, buf->lb_buf,
 					   buf->lb_len);
+		if (IS_ERR(acl))
+			RETURN(PTR_ERR(acl));
 		if (acl == NULL) {
 			rc = mdd_xattr_del(env, obj, name);
 			RETURN(rc);
